--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -1,6 +1,75 @@
-# cacheUrl: https://GITHUB_USERNAME.github.io/REPO_NAME/cache.json
+# cacheUrl: https://bryanlue721.github.io/osmosfeed/cache.json
 sources:
-  - href: https://github.com/osmoscraft/osmosfeed/releases.atom # Get new feature announcement via this feed
-  - href: https://css-tricks.com/feed/
-  - href: https://www.smashingmagazine.com/feed/
-  - href: https://www.freecodecamp.org/news/rss/
+  - href: https://bryanlue.me/rss/
+  - href: https://www.reutersagency.com/feed/
+  - href: http://feeds.bbci.co.uk/news/rss.xml
+  - href: https://feeds.a.dj.com/rss/RSSOpinion.xml
+  - href: https://feeds.a.dj.com/rss/RSSWorldNews.xml
+  - href: https://feeds.a.dj.com/rss/WSJcomUSBusiness.xml
+  - href: https://www.economist.com/the-world-this-week/rss.xml
+  - href: https://www.economist.com/leaders/rss.xml
+  - href: https://www.economist.com/briefing/rss.xml
+  - href: https://www.economist.com/special-report/rss.xml
+  - href: https://www.economist.com/britain/rss.xml
+  - href: https://www.economist.com/europe/rss.xml
+  - href: https://www.economist.com/united-states/rss.xml
+  - href: https://www.economist.com/the-americas/rss.xml
+  - href: https://www.economist.com/middle-east-and-africa/rss.xml
+  - href: https://www.economist.com/asia/rss.xml
+  - href: https://www.economist.com/china/rss.xml
+  - href: https://www.economist.com/international/rss.xml
+  - href: https://www.economist.com/business/rss.xml
+  - href: https://www.economist.com/finance-and-economics/rss.xml
+  - href: https://www.economist.com/science-and-technology/rss.xml
+  - href: https://www.economist.com/books-and-arts/rss.xml
+  - href: https://www.economist.com/graphic-detail/rss.xml
+  - href: https://rss.app/feeds/3ZCLoTmXHuC7X3jn.xml
+  - href: http://feeds.foxnews.com/foxnews/latest
+  - href: https://feeds.washingtonpost.com/rss/politics
+  - href: https://feeds.washingtonpost.com/rss/national
+  - href: https://feeds.washingtonpost.com/rss/opinions
+  - href: https://feeds.washingtonpost.com/rss/world
+  - href: https://nypost.com/feed/
+  - href: https://rss.nytimes.com/services/xml/rss/nyt/HomePage.xml
+  - href: https://abcnews.go.com/abcnews/topstories
+  - href: https://www.cbsnews.com/latest/rss/main
+  - href: http://rss.cnn.com/rss/edition.rss
+  - href: https://www.newsweek.com/rss
+  - href: https://www.malaymail.com/feed/rss
+  - href: https://www.freemalaysiatoday.com/feed/
+  - href: https://www.malaysiakini.com/rss/en/news.rss
+  - href: https://www.bernama.com/en/rssfeed.php
+  - href: https://www.lowyat.net/feed/
+  - href: https://soyacincau.com/feed/
+  - href: https://www.thestar.com.my/rss/News
+  - href: https://www.nst.com.my/feed
+  - href: http://english.astroawani.com/rss/latest/public
+  - href: https://worldofbuzz.com/feed/
+  - href: https://asia.nikkei.com/rss/feed/nar
+  - href: https://www.ibtimes.com/rss
+  - href: https://rss.cbc.ca/lineup/topstories.xml
+  - href: http://ctvnews.ca/rss/TopStories
+  - href: https://globalnews.ca/feed/
+  - href: https://nationalpost.com/feed
+  - href: https://financialpost.com/feed
+  - href: https://torontosun.com/feed/
+  - href: http://rss.dw.com/rdf/rss-en-all
+  - href: https://www.france24.com/en/rss
+  - href: https://www.theguardian.com/uk/rss
+  - href: http://feeds.skynews.com/feeds/rss/home.xml
+  - href: https://www.telegraph.co.uk/rss.xml
+  - href: https://metro.co.uk/feed/
+  - href: https://www.mirror.co.uk/?service=rss
+  - href: https://www.smh.com.au/rss/feed.xml
+  - href: https://www.news.com.au/content-feeds/latest-news-national/
+  - href: https://www.skynews.com.au/rss/
+  - href: https://hongkongfp.com/feed/
+  - href: https://www.channelnewsasia.com/api/v1/rss-outbound-feed?_format=xml
+  - href: https://mothership.sg/feed/
+  - href: https://www.straitstimes.com/news/singapore/rss.xml
+  - href: https://stomp.straitstimes.com/rss.xml
+  - href: https://en.yna.co.kr/RSS/news.xml
+  - href: http://www.koreaherald.com/common/rss_xml.php?ct=101
+  - href: http://english.chosun.com/site/data/rss/rss.xml
+  - href: https://www.soompi.com/feed
+  - href: https://www.koreaboo.com/feed/
